// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Git Sync - repo tab render Git Sync repo List  1`] = `
<div>
  <section
    class="repoContainer"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main contentGrid gitSyncGrid StyledProps--margin-top-medium StyledProps--margin-right-huge StyledProps--margin-bottom-small StyledProps--margin-left-xlarge"
          >
            <div
              class="bp3-form-group"
              data-id="gitConnectorId-0"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="gitConnectorId"
                        placeholder="Search..."
                        style="padding-right: 0px;"
                        type="text"
                        value="GItOne"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="repo-1"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="repo"
                    placeholder="Repo name"
                    type="text"
                    value="wingsUI"
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="branch-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="branch"
                    placeholder="Branch name"
                    type="text"
                    value="master"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group rootFolder"
                >
                  <input
                    class="bp3-input"
                    placeholder="Root folder path"
                    type="text"
                    value="src/temp"
                  />
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main unsetButtons StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  + Add Folder
                </span>
              </button>
            </div>
            <div
              class="StyledProps--font Radio--radioGroup radioGroup StyledProps--main"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio defaultRootRadio StyledProps--main"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </section>
  <section
    class="repoContainer"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main contentGrid gitSyncGrid StyledProps--margin-top-medium StyledProps--margin-right-huge StyledProps--margin-bottom-small StyledProps--margin-left-xlarge"
          >
            <div
              class="bp3-form-group"
              data-id="gitConnectorId-0"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="gitConnectorId"
                        placeholder="Search..."
                        style="padding-right: 0px;"
                        type="text"
                        value="GItOne"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="repo-1"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="repo"
                    placeholder="Repo name"
                    type="text"
                    value="repoTwo"
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="branch-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="branch"
                    placeholder="Branch name"
                    type="text"
                    value="master"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group rootFolder"
                >
                  <input
                    class="bp3-input"
                    placeholder="Root folder path"
                    type="text"
                    value="temp2"
                  />
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main unsetButtons StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  + Add Folder
                </span>
              </button>
            </div>
            <div
              class="StyledProps--font Radio--radioGroup radioGroup StyledProps--main"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio defaultRootRadio StyledProps--main"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </section>
</div>
`;

exports[`Git Sync - repo tab rendering landing view 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main bodyContainer StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-large StyledProps--padding-left-xxxlarge"
  >
    <section
      class="header gitSyncGrid"
    >
      <p
        class="StyledProps--font StyledProps--main columnHeader"
      >
        GIT SERVER
      </p>
      <p
        class="StyledProps--font StyledProps--main columnHeader"
      >
        REPOSITORY
      </p>
      <p
        class="StyledProps--font StyledProps--main columnHeader"
      >
        BRANCH
      </p>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main columnHeader"
        >
          SYNC ROOT FOLDER
        </p>
        <p
          class="StyledProps--font StyledProps--main columnHeaderBody"
        >
          Anything in these folders will be synced to the project
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main columnHeader"
        >
          DEFAULT
        </p>
        <p
          class="StyledProps--font StyledProps--main columnHeaderBody"
        >
          Any new entities created via Harness user interface/apis will be synced to this folder
        </p>
      </div>
    </section>
    <div
      class="StyledProps--font StyledProps--main repoContainer StyledProps--padding-medium"
    >
      <button
        class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-right-medium"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          + Add Repository
        </span>
      </button>
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline"
      >
        Specify your Git server, repository, branch to sync your entities to
      </span>
    </div>
  </div>
</div>
`;

exports[`Git Sync - repo tab rendering landing view 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main bodyContainer StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-large StyledProps--padding-left-xxxlarge"
  >
    <section
      class="header gitSyncGrid"
    >
      <p
        class="StyledProps--font StyledProps--main columnHeader"
      >
        GIT SERVER
      </p>
      <p
        class="StyledProps--font StyledProps--main columnHeader"
      >
        REPOSITORY
      </p>
      <p
        class="StyledProps--font StyledProps--main columnHeader"
      >
        BRANCH
      </p>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main columnHeader"
        >
          SYNC ROOT FOLDER
        </p>
        <p
          class="StyledProps--font StyledProps--main columnHeaderBody"
        >
          Anything in these folders will be synced to the project
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main columnHeader"
        >
          DEFAULT
        </p>
        <p
          class="StyledProps--font StyledProps--main columnHeaderBody"
        >
          Any new entities created via Harness user interface/apis will be synced to this folder
        </p>
      </div>
    </section>
    <section
      class="repoContainer"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main contentGrid gitSyncGrid StyledProps--margin-top-medium StyledProps--margin-right-huge StyledProps--margin-bottom-small StyledProps--margin-left-xlarge"
            >
              <div
                class="bp3-form-group"
                data-id="gitConnectorId-0"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="gitConnectorId"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="repo-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="repo"
                      placeholder="Repo name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="branch-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="branch"
                      placeholder="Branch name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group rootFolder"
                  >
                    <input
                      class="bp3-input"
                      placeholder="Root folder path"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main unsetButtons StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    + Add Folder
                  </span>
                </button>
              </div>
              <div
                class="StyledProps--font Radio--radioGroup radioGroup StyledProps--main"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <label
                    class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio defaultRootRadio StyledProps--main"
                  >
                    <input
                      disabled=""
                      type="radio"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main editRepoContainer StyledProps--padding-medium"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main saveButton StyledProps--intent-primary StyledProps--margin-right-large"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main cancelButton StyledProps--intent-danger"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </section>
  </div>
</div>
`;
